k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mathsync
  labels:
    name: mathsync
    app: mathsync
---
